# ai-employee-fte-system

./: .env.example  .gitignore  .mcp.json  BRONZE_TIER_GUIDE.md  Bronze_Tier.md  CLAUDE.md  Gold-Tier Hackathon-0 Personal AI Employee.txt  Gold_Tier.md  LICENSE  Personal AI Employee Hackathon 0_ Building Autonomous FTEs in 2026.txt  README.md  Silver_Tier.md  ecosystem.config.js  pyproject.toml  run.sh  silver-Tier-hackathon-0-personal-ai-employee.txt
.claude/: settings.json  settings.local.json
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
Learning/: Bronze_Tier_Demo_Script.md  Bronze_Tier_Discussion.md  Bronze_Tier_Video_Guide.md  Dashboard_Specification.md  Gmail_API_Setup_Guide.md  Gold_Tier_Cross-Domain_Flow_Implementation.md  Gold_Tier_Discussion.md  Gold_Tier_MCP_Server.md  LinkedIn_API_Setup_Guide.md  LinkedIn_Bronze_Tier_Post.md  LinkedIn_Bronze_Tier_With_Video.md  LinkedIn_Playwright_Automation_Guide.md  LinkedIn_Post_Prompt_Template.md  Meta_API_Facebook_Instagram_Setup_Guide.md  Platinum_Tier_Discussion.md  SILVER_TIER_DISCUSSION.md  Twitter_Playwright_Automation_Guide.md
config/: cloud-agent.yaml  cloud.env.example  docker-compose-odoo.yml  docker-compose.yml  ecosystem.config.js  keywords.json  local-agent.yaml  local.env.example  nginx-odoo.conf  schedules.json
docs/: architecture.md  lessons-learned.md  platinum-demo-script.md
scripts/: README-local-autostart.md  backup-odoo.sh  bulk_delete_company_emails.py  health-monitor.sh  platinum-demo.sh  ralph-wiggum-check.sh  run-dashboard.sh  setup-cloud-vm.sh  setup-local-sync.sh  (+3 more)
(+1587 files in other folders)
