[project]
name = "full-time-equivalent-project"
version = "0.1.0"
description = "Personal AI Employee — Gold Tier Autonomous Employee"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Bronze
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    # Silver — Gmail
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    # Silver — WhatsApp (Playwright)
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "mcp[cli]>=1.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
